src/styles/Hero.css
.hero {
  height: 100vh;
  display: flex;
  align-items: center;
  padding: 0 10%;
  justify-content: space-between;
}

.hero-name {
    font-size: 4rem;
    font-weight: bold;
    color: white;
}

.hero-title {
    font-size: 1.5rem;
    color: white;
}

.hero-buttons {
    display: flex;
    gap: 2rem;
}

.btn-primary, .btn-secondary {
  padding: 0.75rem 2rem;
  background-color: transparent;
  border-radius: 8px;
  border: 2px solid white;
  text-decoration: none;
  color: white;
  transition: all 0.3s ease;
}

.btn-primary:hover, .btn-secondary:hover {
    background-color: white;
}

.hero-title::after {
  content: '|';
  animation: blink 1s infinite;
}

@keyframes blink {
  0%, 100% { opacity: 1; }
  50% { opacity: 0; }
}

.hero-image img {
  width: 400px;
  height: 400px;
  object-fit: cover;
  border-radius: 16px;
  object-position: center -200px;
}

@media (max-width: 768px) {
  .hero {
    flex-direction: column;
    text-align: center;
  }

  .hero-name {
    font-size: 2.5rem;
  }

  .hero-image img {
    width: 200px;
    height: 200px;
  }

  .hero-buttons {
    justify-content: center;
  }
}

